New commit - No comments provided

--- a/www/scss/views/settings.scss
+++ b/www/scss/views/settings.scss
@@ -34,7 +34,7 @@ Viewport Sized Typography
     border-radius: 5px;
     border-style:  solid;
     border-width:  1px;
-    font-size:     2vmin;
+    font-size:     4vmax;
     width:         calc(100% - 2px);
   }
 
