--- a/www/scss/views/settings.scss
+++ b/www/scss/views/settings.scss
@@ -34,8 +34,9 @@ Viewport Sized Typography
     border-radius: 5px;
     border-style:  solid;
     border-width:  1px;
-    font-size:     4vmax;
-    width:         calc(100% - 2px);
+    font-size:     3vmax;
+    padding:       5px;
+    width:         calc(100% - 2px - 10px);
   }
 
   .centered {
