New commit - No comments provided

--- a/www/scss/views/settings.scss
+++ b/www/scss/views/settings.scss
@@ -27,7 +27,8 @@ Viewport Sized Typography
   }
 
   label {
-    width: 100%;
+    font-size: 3vmax;
+    width:     100%;
   }
 
   input[type=text] {
