--- a/www/scss/views/settings.scss
+++ b/www/scss/views/settings.scss
@@ -29,12 +29,12 @@ Viewport Sized Typography
   /* ***** */
 
   label {
-    font-size: 3vmax;
+    font-size: 3vw;
     width:     100%;
   }
 
   label:focus {
-    font-size: 3vmax;
+    font-size: 3vw;
     width:     100%;
   }
 
@@ -44,7 +44,7 @@ Viewport Sized Typography
     border-radius: 5px;
     border-style:  solid;
     border-width:  1px;
-    font-size:     3vmax;
+    font-size:     3vw;
     padding:       5px;
     width:         calc(100% - 2px - 10px);
   }
@@ -54,7 +54,7 @@ Viewport Sized Typography
   }
 
   input[type=button] {
-    font-size: 3vmax;
+    font-size: 3vw;
     width:     60%;
   }
 }
