--- a/www/scss/views/settings.scss
+++ b/www/scss/views/settings.scss
@@ -22,8 +22,9 @@ Viewport Sized Typography
   width:         calc(100% - 80px);
 
   .full-width-row {
-    float: left;
-    width: 100%;
+    float:      left;
+    margin-top: 5px;
+    width:      100%;
   }
 
   label {
@@ -32,7 +33,7 @@ Viewport Sized Typography
   }
 
   input[type=text] {
-    border-radius: 5px;
+    border-radius: 10px;
     border-style:  solid;
     border-width:  1px;
     font-size:     5vw;
@@ -46,6 +47,7 @@ Viewport Sized Typography
 
   input[type=button] {
     font-size: 5vw;
-    width:     60%;
+    padding:   10px;
+    width:     40%;
   }
 }
