New commit - No comments provided

--- a/www/scss/views/settings.scss
+++ b/www/scss/views/settings.scss
@@ -23,7 +23,7 @@ Viewport Sized Typography
 
   .full-width-row {
     float:      left;
-    margin-top: 5px;
+    margin-top: 2vw;
     width:      100%;
   }
 
