--- a/www/scss/views/settings.scss
+++ b/www/scss/views/settings.scss
@@ -16,12 +16,12 @@ Viewport Sized Typography
   background-color: rgba(255, 255, 255, 0.9);
   float:            left;
   margin-bottom:    0px;
-  margin-left:      40px;
-  margin-right:     40px;
+  padding-left:     40px;
+  padding-right:    40px;
   margin-top:       0px;
   overflow-y:       hidden;
   width:            calc(100% - 80px);
-
+  
   .full-width-row {
     float:      left;
     margin-top: 5vw;
