--- a/www/scss/views/settings.scss
+++ b/www/scss/views/settings.scss
@@ -13,15 +13,16 @@ Viewport Sized Typography
 }
 
 #settings-nav {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 0.8);
   float:            left;
   margin-bottom:    0px;
   padding-left:     40px;
   padding-right:    40px;
   margin-top:       0px;
+  min-height:       100%;
   overflow-y:       hidden;
   width:            calc(100% - 80px);
-  
+
   .full-width-row {
     float:      left;
     margin-top: 5vw;
