New commit - No comments provided

--- a/www/scss/index.scss
+++ b/www/scss/index.scss
@@ -60,6 +60,11 @@
   width:          20%;
 }
 
+.icon-beside-title i {
+  color:     white;
+  font-size: 5em;
+}
+
 .title-beside-icons {
   background:     rgba(0, 0, 0, 0.9);
   float:          left;
