--- a/www/scss/index.scss
+++ b/www/scss/index.scss
@@ -54,8 +54,8 @@
   background:     rgba(0, 0, 0, 0.9);
   float:          left;
   height:         100%;
-  padding-bottom: 20px;
-  padding-top:    20px;
+  /*padding-bottom: 20px;*/
+  /*padding-top:    20px;*/
   text-align:     center;
   width:          20%;
 }
