--- a/www/scss/views/settings.scss
+++ b/www/scss/views/settings.scss
@@ -45,6 +45,11 @@ Viewport Sized Typography
     width:         calc(100% - 2px - 10px);
   }
 
+  select {
+    font-size: 5vw;
+    width:     100%;
+  }
+
   .centered {
     text-align: center;
   }
