--- a/www/scss/views/welcome.scss
+++ b/www/scss/views/welcome.scss
@@ -3,7 +3,7 @@
   background-repeat: repeat;
 }
 
-#welcome-nav {
+#welcome__nav {
   float:         left;
   margin-bottom: 0px;
   margin-left:   40px;
@@ -15,7 +15,7 @@
 
 /* ***** */
 
-#welcome-nav .venue-intro {
+#welcome__nav .venue-intro {
   background:    rgba(240, 146, 18, 0.9);
   display:       table;
   float:         left;
@@ -43,7 +43,7 @@
 
 /* ***** */
 
-#welcome-nav .venue-type {
+#welcome__nav .venue-type {
   background:    rgba(56, 192, 238, 0.9);
   float:         left;
   height:        calc(200px - 80px);
@@ -53,22 +53,22 @@
   display:       table;
 }
 
-#welcome-nav .venue-type-content {
+#welcome__nav .venue-type-content {
   display:        table-cell;
   vertical-align: middle;
 }
 
-#welcome-nav .venue-type-content label {
+#welcome__nav .venue-type-content label {
   display: block;
 }
 
-#welcome-nav .venue-type-content .venue-type-title {
+#welcome__nav .venue-type-content .venue-type-title {
   color:       white;
   font-size:   36px;
   font-weight: bold;
 }
 
-#welcome-nav .venue-type-content .venue-type-desc{
+#welcome__nav .venue-type-content .venue-type-desc{
   color:       white;
   font-size:   26px;
   font-weight: lighter;
@@ -76,7 +76,7 @@
 
 /* ***** */
 
-#welcome-nav .venue-option {
+#welcome__nav .venue-option {
   background:    rgba(190, 190, 190, 0.9);
   float:         left;
   height:        calc(120px - 80px);
@@ -86,12 +86,12 @@
   display:       table;
 }
 
-#welcome-nav .venue-option-content {
+#welcome__nav .venue-option-content {
   display:        table-cell;
   vertical-align: middle;
 }
 
-#welcome-nav .venue-option-content .venue-option-title {
+#welcome__nav .venue-option-content .venue-option-title {
   color:       white;
   font-size:   36px;
   font-weight: bold;
