--- a/www/scss/index.scss
+++ b/www/scss/index.scss
@@ -13,6 +13,9 @@
 /* Styles for the settings view */
 @import "views/settings";
 
+/* Styles for the result list view */
+@import "views/result-list";
+
 /* Generic styles to be copied for every new view */
 @import "views/view-name";
 
