--- a/www/scss/views/result-list.scss
+++ b/www/scss/views/result-list.scss
@@ -7,12 +7,12 @@ Viewport Sized Typography
 1vmax = 1vw or 1vh, whichever is larger
 */
 
-#settings {
+#result-list {
   background-image:  url("../img/dog_and_cat_seamless_pattern-oppacity.png");
   background-repeat: repeat;
 }
 
-#settings__nav {
+#result-list__nav {
   background-color: rgba(255, 255, 255, 0.7);
   float:            left;
   margin-bottom:    0px;
