--- a/www/scss/views/settings.scss
+++ b/www/scss/views/settings.scss
@@ -8,7 +8,7 @@ Viewport Sized Typography
 */
 
 #settings {
-  background-image:  url("../img/dog_and_cat_seamless_pattern-oppacity.png");
+  background-image:  url("../img/ dog_and_cat_seamless_pattern-oppacity.png");
   background-repeat: repeat;
 }
 
